[tool.poetry]
name = "mast"
version = "0.1.0"
description = "MAsonryShake-Table CLI"
license = "GPL-3.0-or-later"
authors = ["ymarcon <yannick.marcon@epfl.ch>"]
readme = "README.md"

[tool.poetry.scripts]
mast = 'mast.app:main'

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
urllib3 = "^2.1.0"
typer = "^0.9.0"
rich = "^13.7.0"
tqdm = "^4.66.1"
openpyxl = "^3.1.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
